[package]
name = "tunnel-client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
bincode = "1.3.3"
reqwest = "0.12.12"
tokio-util = "0.7.13"
