[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["fs"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0.217", features = ["derive"] }
bincode = "1.3.3"
httparse = "1.9.5"
tokio-rustls = "0.26.1"
