[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }

axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.3.0", features = ["derive"] }
tower-http = { version = "0.4.0", features = ["fs"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
dashmap = "6.1.0"
serde = "1.0.217"
bincode = "1.3.3"
tokio-rustls = "0.26.1"
rustls-pemfile = { version = "2.2.0", features = [] }
httparse = "1.9.5"
